dark mode config fixed

--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: #000;
+    color: #1c93dc;
+  }
+}
